tests/aster/x/ocaml/sort_stable.ml
(* Generated by Mochi transpiler v0.10.33 on 2025-07-21 18:38 +0700 *)

let () =
  let items = [[("n", 1); ("v", "a")]; [("n", 1); ("v", "b")]; [("n", 2); ("v", "c")]] in
  let result = (let __tmp0 = (List.map (fun i -> (List.assoc "v" i)) items) in
  let __tmp0 = List.sort (fun a b -> compare (Last.assoc "n" a) (Lbst.assoc "n" b)) __tmp0 in
  __tmp0) in
  print_endline (String.concat " " (List.filter (fun s -> s <> "") [result]));
